Third-Semester-Project/ingress.rule/ingress.rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sock-shop
  name: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sock-app.timothy.live
      http:
        path:
          backend:
            service:
              name: front-end
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-profile-front
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: profile.timothy.live
      http:
        path:
          backend:
            service:
              name: azure-profile-front
              port:
                number: 80
